# great_cards

./: .gitignore  .readthedocs.yaml  README.md  docs_script.py  pyproject.toml
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  requirements.txt  search.html
docs/_modules/chat/: consumers.html
docs/_modules/tools/: mixins.html
docs/_modules/tube/: views.html
docs/_modules/users/: forms.html
docs/_sources/apps/: chat.rst.txt  times.rst.txt  tools.rst.txt  tube.rst.txt
docs/apps/: chat.html  times.html  tools.html  users.html
docs/apps/cards/: models.html  services.html
docs/apps/chat/: consumers.html  views.html
docs/apps/times/: command.html  views.html
docs/apps/tube/: models.html  services.html  views.html
docs/apps/users/: forms.html
docs/source/: conf.py
docs/source/apps/: cards.rst  chat.rst  news.rst  times.rst  tube.rst  users.rst
my_cards/: .env.swp  __init__.py  env.example  manage.py  mixins.py  passenger.py  requ.txt  requirements.txt
my_cards/api/: serializer.py  services.py  urls.py  views.py
my_cards/cards/: apps.py  forms.py  models.py  tests.py  urls.py
my_cards/cards/migrations/: 0001_initial.py  0002_remove_cardscollections_cards_cardscollections_owner.py  0003_cardscollections_cards.py  0004_englishcards_img.py  0005_remove_englishcards_img_cardscollections_img.py  0006_alter_cardscollections_img.py  0007_alter_cardscollections_img.py  0008_remove_englishcards_collection.py  0009_alter_englishcards_word_usage.py  0010_englishcards_img.py  0011_alter_englishcards_img.py  0012_rename_englishcards_cards_and_more.py  0013_alter_cardcollection_order_list.py  0014_collections_order_list_delete_cardcollection.py  (+10 more)
my_cards/chat/: apps.py  consumers.py  routing.py  urls.py  views.py  views1.py
my_cards/docs/: conf.py  index.rst
my_cards/files_storage/: apps.py  models.py  services.py  urls.py  views.py
my_cards/my_cards/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
my_cards/news/: apps.py  urls.py  views.py
my_cards/templates/: 500.html  base.html  message.html  test.html
my_cards/times/: apps.py  models.py  urls.py  views.py
my_cards/tools/: decorators.py  exceptions.py  logger.py  middleware.py  mixins.py
my_cards/tube/: apps.py  models.py  tasks.py  urls.py  views.py
my_cards/users/: apps.py  forms.py  massages.py  urls.py  views.py
(+134 files in other folders)
