[tool.poetry]
name = "great-cards"
version = "0.1.0"
description = ""
authors = ["Grenui92 <grenui92@gmail.com>"]
readme = "README.md"
packages = [{include = "great_cards"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
django-environ = "^0.10.0"
openai = "^0.27.6"
psycopg2-binary = "^2.9.6"
pillow = "^9.5.0"
requests = "^2.30.0"
redis = "^4.5.5"
redis-lru = "^0.1.2"
django-cors-headers = "^4.0.0"
uvicorn = "^0.25.0"
channels = "^4.0.0"
daphne = "^4.0.0"
django-storages = "^1.13.2"
djangorestframework = "^3.14.0"
yt-dlp = "^2023.11.16"
celery = "^5.3.6"
webvtt-py = "^0.4.6"
python-decouple = "^3.8"
gunicorn = "^22.0.0"
channels-redis = "^4.2.0"
flake8 = "^7.1.1"
flake8-docstrings = "^1.7.0"
sphinx = "^8.0.2"
sphinx-autobuild = "^2024.4.16"
groundwork-sphinx-theme = "^1.1.1"
python-docs-theme = "^2024.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
